# mkFileSearch

./: CMakeLists.txt  README.md  build.sh  filepropertiesdialog.cpp  filepropertiesdialog.h  helpers.cpp  helpers.h  main.cpp  mainwindow.cpp  mainwindow.h  searchworker.cpp  searchworker.h  settingsmanager.cpp  settingsmanager.h
i18n/: mkFileSearch_de.ts
src/: filepropertiesdialog.cpp  helpers.cpp  main.cpp  mainwindow.cpp  mainwindow.h  searchworker.cpp  settingsmanager.cpp  settingsmanager.h
